--- a/templates/exports.j2
+++ b/templates/exports.j2
@@ -1,1 +1,1 @@
-/data/export {{ lookup('file','roles/ha-disk/vars/router_ip') }}/255.255.255.255(rw,no_root_squash,no_all_squash,sync,fsid=123)
+/data/export {{ ROUTER_PUBLIC_IP }}/255.255.255.255(rw,no_root_squash,no_all_squash,sync,fsid=123)
